hard-gists/4761479/run.log
=== Docker Run Log for 4761479 ===
Started at: Mi 29. Okt 15:00:41 CET 2025

[2025-10-29 15:00:42] START: Running container for 4761479
[2025-10-29 15:00:42] SUCCESS: Container 6a84a75bb7472acf8ce4ab9004dc7d83bfcc3124bc62567fc109300b08d8fdb1 started for 4761479
=== Container logs for 4761479 ===
  File "/snippet.py", line 12
    print "Running command: %s" % cmd
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4761479 ===
[2025-10-29 15:00:44] INFO: Container 6a84a75bb7472acf8ce4ab9004dc7d83bfcc3124bc62567fc109300b08d8fdb1 has stopped
